@@ -1,3 +1,9 @@
+2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/groups/group_list.php
+	 godmode/reporting/graphs.php: Several fixes in custom graph editor 
+	 with metaconsole activated.
+
 2012-04-10 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	*operation/menu.php,
